buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id("java")
    id("org.springframework.boot") version "3.2.3"
    id("io.spring.dependency-management") version "1.1.7"
    id("com.diffplug.spotless") version "6.21.0"
}

allprojects {
    group = "com.pluxity"
    version = "0.0.1-SNAPSHOT"
    sourceCompatibility = "21"
}

subprojects {
    repositories {
        mavenCentral()
    }
}

tasks.named("test") {
    useJUnitPlatform()
}

bootJar {
    enabled = false
}

test {
    useJUnitPlatform()
}

subprojects {
    setGroup('com.pluxity')
    setVersion('1.0.0')

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.diffplug.spotless'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation('org.springframework.boot:spring-boot-starter-data-jpa')
        implementation('org.springframework.boot:spring-boot-starter-web')
        implementation('org.springframework.boot:spring-boot-starter-validation')
        implementation('org.springframework.boot:spring-boot-starter')

        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'io.micrometer:micrometer-registry-prometheus'

        runtimeOnly('com.h2database:h2')
        runtimeOnly('org.postgresql:postgresql')

        compileOnly('org.projectlombok:lombok')
        annotationProcessor('org.projectlombok:lombok')

        implementation 'org.flywaydb:flyway-core'

        implementation 'org.springframework.data:spring-data-envers'
        implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.11.0")

        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
        implementation 'org.springdoc:springdoc-openapi-starter-common:2.3.0'

        testImplementation('org.projectlombok:lombok')
        testImplementation('org.mockito:mockito-core')
        testImplementation('org.springframework.boot:spring-boot-starter-test')
        testImplementation('org.junit.jupiter:junit-jupiter-api')
        testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
    }

    test {
        useJUnitPlatform()
    }

    bootJar {
        enabled = false
    }

    spotless {
        java {
            target fileTree(dir: 'src/main/java', include: '**/*.java')
            removeUnusedImports()
            googleJavaFormat()
            indentWithTabs(2)
            indentWithSpaces(4)
            trimTrailingWhitespace()
            endWithNewline()
        }
    }
}

repositories {
    mavenCentral()
}